@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-05-15 17:36:17 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-47
+
+    Summary:
+      documentation, fix chapter 6 example
+    Revision:
+      itools--main--0.9--patch-47
+
+
+    modified files:
+     Changelog doc/examples/chapter6/TaskTracker.py doc/files2.tex
+
+
 2005-05-15 17:13:14 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-46
 
     Summary:
